--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "gsap": "^3.11.3",
